# learncuda

./: .gitignore  CMakeLists.txt
day1/: gpu_info.cu
day2/: mat_add.cu
day3/: max-unified-naive.cu
day4/: max-unified-shared.cu
day5/: max-warp-shuffle.cu
day6/: matmul-naive.cu
day7/: matmul-tile-notmanaged.cu
day8/: matmul-tile4-notmanaged.cu
